image generation swagger fix
